--- a/src/Presentation/SmartStore.Web/Administration/Content/variables.less
+++ b/src/Presentation/SmartStore.Web/Administration/Content/variables.less
@@ -18,16 +18,25 @@
 @white:                 #fff;
 
 
+// Brand colors
+// -------------------------
+@primaryColor:			#3f51b5; // Indigo 500
+@primaryColorLight:		#c5cae9; // Indigo 100
+@primaryColorDark:		#303f9f; // Indigo 700
+@accentColor:			#ffab40; // Orange A200
+@accentColorLight:		#ffd180; // Orange A100
+@accentColorDark:		#ff9100; // Orange A400
+
 // Accent colors
 // -------------------------
-@blue:                  #049cdb;
-@blueDark:              #0064cd;
-@green:                 #46a546;
-@red:                   #9d261d;
-@yellow:                #ffc40d;
-@orange:                #ffa726; //#f89406;
-@pink:                  #c3325f;
-@purple:                #7a43b6;
+@blue:                  #5677fc; // Blue 500
+@blueDark:              #455ede; // Blue 700
+@green:                 #259b24; // Green 500
+@red:                   #e51c23; // Red 500
+@yellow:                #fdd835; // Yellow 600
+@orange:                @accentColor; //#ffa726; //#f89406;
+@pink:                  #e91e63; // Pink 500
+@purple:                #9c27b0; // Purple 500
 
 
 // Scaffolding
@@ -38,7 +47,7 @@
 
 // Links
 // -------------------------
-@linkColor:             #15c; //#3276b1; //#08c;
+@linkColor:             #0277bb;
 @linkColorHover:        darken(@linkColor, 15%);
 
 
@@ -66,9 +75,10 @@
 @fontSizeSmall:         @baseFontSize * 0.85; // ~12px
 @fontSizeMini:          @baseFontSize * 0.75; // ~11px
 
-@paddingLarge:          11px 19px; // 44px
-@paddingSmall:          2px 10px;  // 26px
-@paddingMini:           1px 6px;   // 24px
+@paddingDefault:		6px 12px; // 34px
+@paddingLarge:          10px 16px; // 42px
+@paddingSmall:          4px 10px;  // 30px
+@paddingMini:           2px 6px;   // 26px
 
 @baseBorderRadius:      2px;
 @borderRadiusLarge:     2px;
@@ -85,27 +95,27 @@
 
 // Buttons
 // -------------------------
-@btnBackground:                     @white;
-@btnBackgroundHighlight:            darken(@white, 10%);
+@btnBackground:                     #fff;
+@btnBackgroundHighlight:            darken(#fff, 5%);
 @btnBorder:                         #c6c6c6; //#ccc;
 
-@btnWarningBackground:              #3b50ce; //@linkColor;
-@btnWarningBackgroundHighlight:     spin(@btnPrimaryBackground, 15%); //darken(@btnPrimaryBackground, 10%);
+@btnWarningBackground:              #7986cb; // Indigi 300
+@btnWarningBackgroundHighlight:     darken(@btnWarningBackground, 10%);
 
-@btnInfoBackground:                 #5bc0de;
-@btnInfoBackgroundHighlight:        #2f96b4;
+@btnInfoBackground:                 #9fa8da; // Indigo 200
+@btnInfoBackgroundHighlight:        darken(@btnInfoBackground, 10%);
 
-@btnSuccessBackground:              #62c462;
-@btnSuccessBackgroundHighlight:     #51a351;
+@btnSuccessBackground:              @green;
+@btnSuccessBackgroundHighlight:     darken(@btnSuccessBackground, 10%);
 
-@btnPrimaryBackground:              @orange;
-@btnPrimaryBackgroundHighlight:     darken(@orange, 8%);
+@btnPrimaryBackground:              @accentColor;
+@btnPrimaryBackgroundHighlight:     darken(@btnPrimaryBackground, 10%);
 
-@btnDangerBackground:               #e84e40; //#ee5f5b;
-@btnDangerBackgroundHighlight:      #bd362f;
+@btnDangerBackground:               #e84e40; // Red 400
+@btnDangerBackgroundHighlight:      darken(@btnDangerBackground, 10%);
 
-@btnInverseBackground:              #444;
-@btnInverseBackgroundHighlight:     @grayDarker;
+@btnInverseBackground:              #263238; // Blue Grey 900
+@btnInverseBackgroundHighlight:     #000;
 
 
 // Forms
@@ -171,7 +181,7 @@
 
 // Wells
 // -------------------------
-@wellBackground:                  #f5f5f5;
+@wellBackground:                  #fafafa;
 
 
 // Navbar
@@ -194,8 +204,8 @@
 @navbarBrandColor:                #fff; //@navbarLinkColor;
 
 // Inverted navbar
-@navbarInverseBackground:                #3b50ce;
-@navbarInverseBackgroundHighlight:       #3b50ce;
+@navbarInverseBackground:                @primaryColor; //#3b50ce;
+@navbarInverseBackgroundHighlight:       @primaryColor; //#3b50ce;
 @navbarInverseBorder:                    transparent;
 
 @navbarInverseText:                      #fff;
@@ -229,21 +239,21 @@
 
 // Form states and alerts
 // -------------------------
-@warningText:             #c09853; // #404040;
-@warningBackground:       #fcf8e3; // #EEDC94
-@warningBorder:           darken(spin(@warningBackground, -10), 3%);  // darken(spin(@warningBackground, -10), 6%);
+@warningText:             #c09853;
+@warningBackground:       #fff3e0; // Orange 50
+@warningBorder:           darken(spin(@warningBackground, -10), 3%);
 
-@errorText:               #b94a48; // @white; 
-@errorBackground:         #f2dede; // #C43C35; 
-@errorBorder:             darken(spin(@errorBackground, -10), 3%); // darken(spin(@errorBackground, -10), 6%); 
+@errorText:               #b94a48; //
+@errorBackground:         #fde0dc; // Red 50; 
+@errorBorder:             darken(spin(@errorBackground, -10), 3%);
 
 @successText:             #468847; // @white;
-@successBackground:       #dff0d8; // #57a957; 
-@successBorder:           darken(spin(@successBackground, -10), 3%); // darken(spin(@successBackground, -10), 6%);
+@successBackground:       #d0f8ce; // Green 50; 
+@successBorder:           darken(spin(@successBackground, -10), 3%);
 
 @infoText:                #3a87ad; // @white;
-@infoBackground:          #d9edf7; // #339BB9;
-@infoBorder:              darken(spin(@infoBackground, -10), 3%); // darken(spin(@infoBackground, -10), 6%); 
+@infoBackground:          #e8eaf6; // Indigo 50
+@infoBorder:              darken(spin(@infoBackground, -10), 3%);
 
 
 // Tooltips and popovers
