--- a/src/Presentation/SmartStore.Web/Administration/Views/Shared/Menu.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Shared/Menu.cshtml
@@ -128,7 +128,7 @@
             <a href="@GetNodeLink(node)">
 				@if (hasIcons)
 				{
-					var iconClass = "fa fa-fixed-width";
+					var iconClass = "fa fa-fw";
 					if (node.Value.Icon.HasValue())
 					{
 						iconClass += " fa-" + node.Value.Icon;
