--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Views/Shared/ConfigureTheme.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Views/Shared/ConfigureTheme.cshtml
@@ -52,27 +52,13 @@
 @helper TabButtons()
 {
     <table class="adminContent">
-        @ThemeVarEditor("BtnBackground", "Default")
-        @ThemeVarEditor("BtnBackgroundHighlight")
-        @ThemeVarEditor("BtnColor")
-        @ThemeVarEditor("BtnPrimaryBackground", "Primary")
-        @ThemeVarEditor("BtnPrimaryBackgroundHighlight")
-        @ThemeVarEditor("BtnPrimaryColor")
-        @ThemeVarEditor("BtnInfoBackground", "Info")
-        @ThemeVarEditor("BtnInfoBackgroundHighlight")
-        @ThemeVarEditor("BtnInfoColor")
-        @ThemeVarEditor("BtnSuccessBackground", "Success")
-        @ThemeVarEditor("BtnSuccessBackgroundHighlight")
-        @ThemeVarEditor("BtnSuccessColor")
-        @ThemeVarEditor("BtnWarningBackground", "Warning")
-        @ThemeVarEditor("BtnWarningBackgroundHighlight")
-        @ThemeVarEditor("BtnWarningColor")
-        @ThemeVarEditor("BtnDangerBackground", "Danger")
-        @ThemeVarEditor("BtnDangerBackgroundHighlight")
-        @ThemeVarEditor("BtnDangerColor")
-        @ThemeVarEditor("BtnInverseBackground", "Inverse")
-        @ThemeVarEditor("BtnInverseBackgroundHighlight")
-        @ThemeVarEditor("BtnInverseColor")
+        @ThemeVarEditor("BtnBackground")
+        @ThemeVarEditor("BtnPrimaryBackground")
+        @ThemeVarEditor("BtnInfoBackground")
+        @ThemeVarEditor("BtnSuccessBackground")
+        @ThemeVarEditor("BtnWarningBackground")
+        @ThemeVarEditor("BtnDangerBackground")
+        @ThemeVarEditor("BtnInverseBackground")
     </table>
 }
 
