--- a/src/Presentation/SmartStore.Web/Content/bootstrap/alerts.less
+++ b/src/Presentation/SmartStore.Web/Content/bootstrap/alerts.less
@@ -9,14 +9,21 @@
 .alert {
   padding: 8px 35px 8px 14px;
   margin-bottom: @baseLineHeight;
-  text-shadow: 0 1px 0 rgba(255,255,255,.5);
   background-color: @warningBackground;
-  border: 1px solid @warningBorder;
-  .border-radius(@baseBorderRadius);
-  color: @warningText;
+  border-left-width: 5px;
+  border-left-style: solid;
+  border-left-color: #aaa;
+  border-left-color: rgba(0,0,0, .18);
+  color: @textColor;
+  color: rgba(0,0,0, 0.75);
 }
 .alert h4 {
   margin: 0; //-2px 0 0 14px;
+  color: rgba(0,0,0, .85);
+  margin-bottom: 10px;
+}
+.alert a {
+  text-decoration: underline;
 }
 
 // Adjust close link position
@@ -33,19 +40,13 @@
 
 .alert-success {
   background-color: @successBackground;
-  border-color: @successBorder;
-  color: @successText;
 }
 .alert-danger,
 .alert-error {
   background-color: @errorBackground;
-  border-color: @errorBorder;
-  color: @errorText;
 }
 .alert-info {
   background-color: @infoBackground;
-  border-color: @infoBorder;
-  color: @infoText;
 }
 
 
