--- a/src/Presentation/SmartStore.Web/Content/bootstrap/custom/custom.less
+++ b/src/Presentation/SmartStore.Web/Content/bootstrap/custom/custom.less
@@ -109,53 +109,6 @@ nav li {
 // ALERT STYLES
 // ------------
 
-// Base alert styles
-
-.alert {
-	text-shadow: none;
-	.box-shadow(none);
-	.border-radius(0);
-	border-width: 0;
-	border-style: solid;
-	border-left-width: 5px;
-	border-color: transparent;
-	border-left-color: darken(@warningBackground, 18%);
-	border-left-color: #aaa;
-	border-left-color: rgba(0,0,0, .18);
-}
-
-.alert h4 {
-	color: #aaa;
-	color: rgba(0,0,0, .5);
-	font-size: 18px;
-	font-weight: bold;
-	margin-bottom: 10px;
-	font-family: @baseFontFamily;
-}
-
-.alert a {
-	text-decoration: none;
-	font-weight: bold;
-	color: darken(@warningText, 10%);
-}
-
-.alert a:hover {
-	font-weight: bold;
-	text-decoration: underline;
-}
-
-.alert-success a {
-	color: darken(@successText, 10%);
-}
-
-.alert-info a {
-	color: darken(@infoText, 10%);
-}
-
-.alert-error a {
-	color: darken(@errorText, 10%);
-}
-
 .alert > *:first-child {
 	margin-top: 0;
 }
@@ -179,6 +132,17 @@ span.field-validation-error {
 
 // WELL TWEAKS
 // ------------
+.well {
+	background-color: #fafafa;
+	border: 1px solid #e5e5e5;
+	border-radius: 3px;
+	.box-shadow(inset 0 0 10px rgba(0,0,0, 0.05));
+}
+
+.well-small {
+	border-radius: 3px;
+}
+
 .well > *:first-child {
 	margin-top: 0;
 }
@@ -273,38 +237,6 @@ input[type="file"] {
 
 // FORMS (PROMPTS)
 // ---------------
-// (MC): add neat shadow and hover effect to prompts
-textarea,
-input[type="text"],
-input[type="password"],
-input[type="datetime"],
-input[type="datetime-local"],
-input[type="date"],
-input[type="month"],
-input[type="time"],
-input[type="week"],
-input[type="number"],
-input[type="email"],
-input[type="url"],
-input[type="search"],
-input[type="tel"],
-input[type="color"],
-.uneditable-input {
-	.box-shadow(inset 0 1px 1px rgba(0,0,0,.075));
-
-	// Hover state
-	&:hover {
-		@inputHoverBorderColor: darken(@inputBorder, 8%);
-		border: 1px solid @inputHoverBorderColor;
-	}
-
-	// Focus state
-	&:focus {
-		color: #000;
-		outline: 0;
-		outline: thin dotted \9; /* IE6-9 */
-	}	
-}
 
 .input-append .add-on .fa, 
 .input-prepend .add-on .fa {
@@ -356,9 +288,9 @@ th label {
 }
 .nav-pills > .active > a,
 .nav-pills > .active > a:hover {
-	text-shadow: 0 1px 0 mix(@linkColor, #000, 80%);
-	#gradient > .vertical(darken(@linkColor, 8%), @linkColor);
-	.box-shadow(~'0px 1px 6px rgba(0,0,0, 0.3) inset, 0px 1px 0px #fff');
+	//#gradient > .vertical(darken(@linkColor, 8%), @linkColor);
+	border-radius: 2px;
+	.box-shadow(~'inset 0 3px 5px rgba(0,0,0,.125)');
 }
 
 .tab-content {
