--- a/src/Presentation/SmartStore.Web/Content/bootstrap/forms.less
+++ b/src/Presentation/SmartStore.Web/Content/bootstrap/forms.less
@@ -80,7 +80,7 @@ input[type="color"],
 .uneditable-input {
   display: inline-block;
   height: @baseLineHeight;
-  padding: 4px 6px;
+  padding: 6px 6px;
   margin-bottom: @baseLineHeight / 2;
   font-size: @baseFontSize;
   line-height: @baseLineHeight;
@@ -120,14 +120,13 @@ input[type="color"],
   background-color: @inputBackground;
   border: 1px solid @inputBorder;
   .box-shadow(inset 0 1px 1px rgba(0,0,0,.075));
-  .transition(~"border linear .2s, box-shadow linear .2s");
 
   // Focus state
   &:focus {
-    border-color: rgba(82,168,236,.8);
+	color: #000;
+    border-color: @blue; // rgba(82,168,236,.8);
     outline: 0;
     outline: thin dotted \9; /* IE6-9 */
-    .box-shadow(~"inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(82,168,236,.6)");
   }
 }
 
@@ -453,7 +452,7 @@ select:focus:required:invalid {
     width: auto;
     height: @baseLineHeight;
     min-width: 16px;
-    padding: 4px 5px;
+    padding: 6px 5px;
     font-size: @baseFontSize;
     font-weight: normal;
     line-height: @baseLineHeight;
