--- a/src/Presentation/SmartStore.Web/Content/bootstrap/labels-badges.less
+++ b/src/Presentation/SmartStore.Web/Content/bootstrap/labels-badges.less
@@ -14,8 +14,8 @@
   color: @white;
   vertical-align: baseline;
   white-space: nowrap;
-  text-shadow: 0 -1px 0 rgba(0,0,0,.25);
   background-color: @grayLight;
+  text-shadow: none;
 }
 // Set unique padding and border-radii
 .label {
