--- a/src/Presentation/SmartStore.Web/Views/Boards/_ActiveTopics.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Boards/_ActiveTopics.cshtml
@@ -31,7 +31,7 @@
         <div class="pull-right" style="padding-top:15px">
             @if (Model.ViewAllLinkEnabled)
             {        
-                <button class="btn btn-link" onclick="setLocation('@Url.Action("ActiveDiscussions")')">
+                <button class="btn" onclick="setLocation('@Url.Action("ActiveDiscussions")')">
                     <i class="fa fa-th-list"></i>&nbsp;
                     @T("Forum.ActiveDiscussions.ViewAll")
                 </button>
