--- a/src/Presentation/SmartStore.Web/Content/bootstrap/custom/custom.less
+++ b/src/Presentation/SmartStore.Web/Content/bootstrap/custom/custom.less
@@ -67,7 +67,7 @@
 .fa {
 	// prevent Chrome ugliness on fonts
 	//-webkit-text-stroke: 0.25px;
-	-webkit-font-smoothing: auto;
+	-webkit-font-smoothing: subpixel-antialiased;
 }
 
 .btn-small .fa {
@@ -288,7 +288,6 @@ th label {
 }
 .nav-pills > .active > a,
 .nav-pills > .active > a:hover {
-	//#gradient > .vertical(darken(@linkColor, 8%), @linkColor);
 	border-radius: 2px;
 	.box-shadow(~'inset 0 3px 5px rgba(0,0,0,.125)');
 }
@@ -377,7 +376,7 @@ th label {
 
 }
 
-.ui-menu {
+/*.ui-menu {
 	padding: 5px 0;
 	margin: 2px 0 0; // override default ul
 	background-color: @dropdownBackground;
@@ -421,7 +420,7 @@ th label {
 		color: @dropdownLinkColorHover !important;
 		background: @dropdownLinkBackgroundHover !important;
 	}
-}
+}*/
 
 // MVC UI adaptation
 // -------------------------
