--- a/src/Presentation/SmartStore.Web/Content/bootstrap/custom/datetimepicker.less
+++ b/src/Presentation/SmartStore.Web/Content/bootstrap/custom/datetimepicker.less
@@ -157,11 +157,12 @@
 .input-append,
 .input-prepend {
   &.date {
-    .add-on i {
+    .add-on .fa {
       display: block;
       cursor: pointer;
       width: 16px;
       height: 16px;
+	  line-height: 20px;
     }
   }
 }
