New widget zone left from order totals in order summary

--- a/src/Presentation/SmartStore.Web/Content/theme.common.less
+++ b/src/Presentation/SmartStore.Web/Content/theme.common.less
@@ -892,6 +892,15 @@ p.continued {
 	margin-bottom: 2px;
 }
 
+.order-totals-left .column {
+	float: left;
+	width: 48%;
+	box-sizing: border-box;
+}
+.order-totals-left .column:last-child {
+	margin-left: 4%;
+}
+
 
 
 /* PRODUCT BUNDLE ITEMS */
