--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
@@ -1019,7 +1019,11 @@ table.cart .cart-item-row .qty-input {
 .payment-methods .option-name label {
 	font-weight: bold;
 }
-
+.checkout-data .shipping-options,
+.checkout-data .payment-methods {
+	border: 1px solid #d7d7d7;
+}
+ 
 
 
 
