--- a/src/Presentation/SmartStore.Web/Administration/Views/Plugin/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Plugin/List.cshtml
@@ -1,10 +1,108 @@
 ﻿@model LocalPluginsModel
 @using SmartStore.Web.Framework.UI;
+@using Newtonsoft.Json;
+
 @{    
     //page title
     ViewBag.Title = T("Admin.Configuration.Plugins").Text;
 
-    var allPluginsSelectList = Model.AllPlugins.Select(x => new SelectListItem { Value = x.SystemName, Text = x.FriendlyName });
+	var allPluginsSelectList = Model.AllPlugins.Select(x => new SelectListItem { Value = x.SystemName, Text = x.FriendlyName });
+	var availableStores = JsonConvert.SerializeObject(Model.AvailableStores.Select(x => new { value = x.Id, text = x.Name }).ToArray());
+
+	Html.AddCssFileParts(true, "~/Content/x-editable/bootstrap-editable.css");
+	Html.AppendScriptParts(true, "~/Content/x-editable/bootstrap-editable.js");
+}
+
+@helper PluginList(IEnumerable<PluginModel> plugins)
+{
+	foreach (var plugin in plugins)
+	{
+		<div class="module-item@(!plugin.Installed ? " inactive" : "") clearfix" data-system-name="@plugin.SystemName" data-friendly-name="@plugin.FriendlyName">
+			<div class="module-icon">
+				<img class="icon img-responsive" src="@Url.Content(plugin.IconUrl)" />
+			</div>
+			<div class="module-data module-data-cols-2 clearfix@(!plugin.Installed ? " inactive" : "")">
+				<!-- General -->
+				<div class="module-col">
+					<div>
+						<span class="module-name">
+							@plugin.FriendlyName
+						</span>
+						@if (plugin.Installed)
+						{
+							<span class="label label-warning">@T("Admin.Configuration.Plugins.Fields.Installed")</span>
+						}
+					</div>
+					<div class="module-info">
+						@if (plugin.Author.HasValue())
+						{
+							<span class="attr-name">@T("Admin.Configuration.Plugins.Fields.Author"):</span>
+							<span class="attr-value">@plugin.Author</span>
+						}
+						<span class="attr-name">@T("Admin.Configuration.Plugins.Fields.Version"):</span>
+						<span class="attr-value">@plugin.Version</span>
+						<span class="attr-name">@T("Admin.Configuration.Plugins.Fields.SystemName"):</span>
+						<span class="attr-value">@plugin.SystemName</span>
+					</div>
+					@if (plugin.Description.HasValue())
+					{
+						<div class="module-description">
+							@plugin.Description
+						</div>
+					}
+					@if (@Model.AvailableStores.Count > 1)
+					{
+						<div style="margin: 4px 0;">
+							<span>@T("Admin.Common.Store.LimitedTo"): </span>
+							<a href="#" data-pk='@plugin.SystemName' data-value='[@String.Join(",", plugin.SelectedStoreIds)]' class="editable editable-click store-limiter">
+								<!-- AJAX -->
+							</a>
+						</div>
+					}
+					<div class="module-actions">
+						<a class="btn btn-link plugin-edit" data-systemname='@plugin.SystemName' href="#">
+							<i class="fa fa-pencil-square-o"></i>
+							@T("Admin.Common.Edit")
+						</a>
+
+						@if (plugin.ConfigurationUrl.HasValue())
+						{
+							<a class="btn btn-link plugin-configure" href="@plugin.ConfigurationUrl">
+								<i class="fa fa-cog"></i>
+								@T("Admin.Configuration.Plugins.Fields.Configure")
+							</a>
+						}
+						@if (plugin.Installed)
+						{
+							<a class="btn btn-link plugin-update-resources" href="@Url.Action("UpdateStringResources", new { systemName = plugin.SystemName })">
+								<i class="fa fa-refresh"></i>
+								@T("Admin.Configuration.Plugins.Resources.Update")
+							</a>
+						}
+					</div>
+				</div>
+
+				<!-- Buttons -->
+				<div class="module-col">
+					@if (plugin.Installed)
+					{
+						<a class="btn plugin-uninstall" data-toggle="button" href="#">
+							@T("Admin.Configuration.Plugins.Fields.Uninstall")
+						</a>
+					}
+					else
+					{
+						<a class="btn btn-success plugin-install" data-toggle="button" href="#">
+							<i class="fa fa-arrow-circle-o-down-alt"></i>
+							@T("Admin.Configuration.Plugins.Fields.Install")
+						</a>
+					}
+
+				</div>
+
+			</div>
+		</div>
+	}
 }
 
 @using (Html.BeginForm("ExecuteTasks", null, FormMethod.Post, new { id = "plugins-form" }))
@@ -69,110 +167,46 @@
     
                 @foreach (var g in Model.Groups.OrderBy(x => x.Key))
                 {
-                    <div class="plugins-group">
-                        <h3 class="group-title">
-                            @g.Key
-                        </h3>
-                        @PluginList(g.Value)
-                    </div>
+                    <div class="module-list">
+						<h3>@g.Key</h3>
+						@PluginList(g.Value)
+					</div>
                 }
 
                 <input type="submit" id="btnRefresh" name="btnRefresh" style="display: none" />
             </td>
         </tr>
     </table>
-    
-    @helper PluginList(IEnumerable<PluginModel> plugins)
-{  
-        <table class="table plugins-table">
-            
-            <tbody>
+}
 
-            @foreach (var plugin in plugins)
-            {
-                <tr class='plugin-item@(!plugin.Installed ? " uninstalled" : "")' data-system-name="@plugin.SystemName" data-friendly-name="@plugin.FriendlyName">
-                    <td class="cell-icon">
-                        <img class="icon" src='@Url.Content(plugin.IconUrl)' />
-                    </td>
-                    <td class="cell-data">
-                        
-                        <div>
-                            @if (plugin.Installed)
-                            {
-                                <span class="label label-warning">@T("Admin.Configuration.Plugins.Fields.Installed")</span>
-                                if (plugin.CanChangeEnabled)
-                                {
-                                    <span class='label@(plugin.IsEnabled ? " label-success" : "")'>
-                                        @Html.Raw(plugin.IsEnabled ? T("Common.Active") : T("Common.Inactive"))
-                                    </span>
-                                }
-                            }
-                            <span class="plugin-name">@plugin.FriendlyName</span>
-                        </div>
-                        
-                        <div class="plugin-data">
-                            @if (plugin.Author.HasValue())
-                            {
-                                <text><span class="attr-name">@T("Admin.Configuration.Plugins.Fields.Author"):</span> <span class="attr-value">@plugin.Author,</span> </text>
-                            }
-                            <span class="attr-name">@T("Admin.Configuration.Plugins.Fields.Version"):</span> <span class="attr-value">@plugin.Version</span>
-                            <span class="attr-name">@T("Admin.Configuration.Plugins.Fields.SystemName"):</span> <span class="attr-value">@plugin.SystemName</span>
-                        </div>
-
-                        @if (plugin.Description.HasValue())
-                        {
-                            <div class="plugin-description">
-                                @T("Common.Description"): <span class="attr-value">@plugin.Description</span>
-                            </div>
-                        }
-
-                        <div class="plugin-actions">
-
-							<i class="fa fa-pencil-square-o"></i>
-							<a class="plugin-edit" data-systemname='@plugin.SystemName' href="#">@T("Admin.Common.Edit")</a>
-
-                            @if (plugin.ConfigurationUrl.HasValue())
-                            {
-                                <i class="fa fa-cog"></i>
-                                <a class="plugin-configure" href="@plugin.ConfigurationUrl">@T("Admin.Configuration.Plugins.Fields.Configure")</a>
-                            }
-                            @if (plugin.Installed)
-                            {
-                                <i class="fa fa-refresh"></i>
-                                <a class="plugin-update-resources" href="@Url.Action("UpdateStringResources", new { systemName = plugin.SystemName })">
-                                    @T("Admin.Configuration.Plugins.Resources.Update")</a>
-                            }
-                        </div>
-
-                    </td>
-                    <td class="cell-install">
-                        <div data-plugin-name="@plugin.FriendlyName" data-system-name="@plugin.SystemName">
-                            @if (plugin.Installed)
-                            {
-                                <a class="btn plugin-uninstall" data-toggle="button" href="#">
-                                    @T("Admin.Configuration.Plugins.Fields.Uninstall")
-                                </a>
-                            }
-                            else
-                            {
-                                <a class="btn btn-success plugin-install" data-toggle="button" href="#">
-                                    <i class="fa fa-arrow-circle-o-down-alt"></i>
-                                    @T("Admin.Configuration.Plugins.Fields.Install")
-                                </a>
-                            }
-
-                        </div>
-                    </td>
-                </tr>
-            }
-
-            </tbody>
-
-        </table>
-    }
-    
-    <script type="text/javascript">
+<script type="text/javascript">
     $(document).ready(function () {
+
+    	var stores = @Html.Raw(availableStores);
+
+    	// Multistore
+    	$(".store-limiter").editable({
+			type: 'checklist',
+			title: '@T("Admin.Common.Store.AvailableFor")',
+			url: '@Url.Action("SetSelectedStores")',
+			source: stores,
+    		unsavedclass: null,
+    		placement: "right",
+    		emptytext: '@T("Common.No")',
+    		autotext: 'always',
+    		display: function (value, sourceData) {
+    			//display checklist as comma-separated values
+    			var html = [],
+					checked = $.fn.editableutils.itemsByValue(value, sourceData);
+
+    			if (checked.length) {
+    				$.each(checked, function (i, v) { html.push($.fn.editableutils.escape(_.str.truncate(v.text, 40))); });
+    				$(this).html(html.join(', '));
+    			} else {
+    				$(this).empty();
+    			}
+    		}
+    	});
 
         function getPluginFriendlyName(dropdown, systemName) {
             return dropdown.find('option[value="{0}"]'.format(systemName)).text();
@@ -182,7 +216,8 @@
             dropdownUninstall = $('#pluginsToUninstall'),
             btnExecuteTasks = $('#btn-execute-tasks');
 
-        // Execute filtering
+    	// Execute filtering
+        var mainContainer = $('#local-plugins');
         $('#filter-query').on('keyup', function (e) {
             var el = $(this);
 
@@ -191,16 +226,16 @@
                 rg = new RegExp(filter, "i");
 
             // Loop through the plugin items
-            $('.plugins-group').each(function () {
+            $('.module-list').each(function () {
                 var group = $(this),
                     count = 0;
 
-                group.find('.plugin-item').each(function () {
+                group.find('.module-item').each(function () {
                     // If the list item does not contain the text phrase hide it
                     if (filter.length > 1 && $(this).data('system-name').search(rg) < 0 && $(this).data('friendly-name').search(rg) < 0) {
                         $(this).hide();
                     }
-                        // Show the list item if the phrase matches and increase the count by 1
+                    // Show the list item if the phrase matches and increase the count by 1
                     else {
                         $(this).show();
                         count++;
@@ -214,6 +249,10 @@
                     group.hide();
                 }
             });
+
+            if (!mainContainer.visible(true)) {
+            	$.scrollTo(mainContainer, 400, { offset: -50 });
+            }
         });
 
         // Create tooltip for  ExecuteTasks button which informs
@@ -248,7 +287,7 @@
             e.preventDefault();
 
             var el = $(this),
-                systemName = el.parent().data('system-name'),
+                systemName = el.closest('.module-item').data('system-name'),
                 dropdown = null;
 
             if (el.hasClass("plugin-install")) {
@@ -308,7 +347,7 @@
         });
 
         // Update (all) plugin resources
-        $('#plugins-form').on('click', 'a.plugin-update-resources,a.plugin-update-allresources', function (e) {
+        $('#plugins-form').on('click', 'a.plugin-update-resources, a.plugin-update-allresources', function (e) {
             e.preventDefault();
             var el = $(this);
 
@@ -348,6 +387,5 @@
         });
     });
 </script>
-}
 
 @Html.Action("UploadPackage", "Packaging", new { isTheme = false })
