--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.Stores.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.Stores.cshtml
@@ -36,7 +36,7 @@
                 foreach (var store in Model.AvailableStores)
                 {
                     <label class="checkbox">
-                        <input type="checkbox" name="SelectedStoreIds" value="@store.Id" checked="@(Model.SelectedStoreIds != null && Model.SelectedStoreIds.Contains(store.Id))" />
+                        <input type="checkbox" name="SelectedStoreIds" value="@store.Id" @Html.Attr("checked", "checked", Model.SelectedStoreIds != null && Model.SelectedStoreIds.Contains(store.Id)) />
                         <span>@store.Name</span>
                     </label>
                 }
