--- a/src/Presentation/SmartStore.Web/Administration/Views/Shared/_Providers.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Shared/_Providers.cshtml
@@ -29,60 +29,115 @@
 		return null;
 	}
 
+	private bool IsActive(ProviderModel item)
+	{
+		var activatable = item as IActivatable;
+		if (activatable == null)
+		{
+			return true;
+		}
+
+		return activatable.IsActive;
+	}
+	
 	private string GetColumnWidth()
 	{
 		return "{0}%".FormatInvariant(100 / (Model.ExtraColumns.Count + 1));
 	}
 }
 
-<table class="table plugins-table">
-	<colgroup>
-		<col style="width: 48px" />
-		<col style="width:@GetColumnWidth()" />
-		@foreach (var col in Model.ExtraColumns)
-		{
-			<col style="width:@GetColumnWidth()" />
-		}
-	</colgroup>
-	<tbody>
-		@foreach (var item in Model.Data)
-		{
-			<tr class="plugin-item" data-system-name="@item.SystemName" data-friendly-name="@item.FriendlyName">
-				<td class="cell-icon">
-					<img class="icon" src="@Url.Content(item.IconUrl)" />
-				</td>
-				<td class="cell-data" style="width:initial">
+<div class="module-list@(Model.Data.Any(x => x.IsEditable) ? " sortable-list" : "")">
+	@foreach (var item in Model.Data)
+	{
+		<div class='module-item sortable-item clearfix@(!IsActive(item) ? " inactive" : "")' data-system-name="@item.SystemName" data-friendly-name="@item.FriendlyName">
+			@if (item.IsEditable)
+			{
+				<div class="sortable-grip"></div>
+			}
+			<div class="module-icon">
+				<img class="icon img-responsive" src="@Url.Content(item.IconUrl)" />
+			</div>
+			<div class="module-data module-data-cols-@(Model.ExtraColumns.Count + 1) clearfix">
+				<!-- General -->
+				<div class="module-col">
 					<div>
+						<span class="module-name">@item.FriendlyName</span>
 						@ActiveLabel(item)
-						<span class="plugin-name">
-							@item.FriendlyName
-						</span>
 					</div>
-					<div class="plugin-data">
+					<div class="module-info">
 						<span class="attr-name">@T("Common.SystemName"):</span>
 						<span class="attr-value">@item.SystemName</span>
-						<span class="attr-name">@T("Common.DisplayOrder"):</span>
-						<span class="attr-value">@item.DisplayOrder</span>
 					</div>
-					<div class="plugin-actions">
-						<i class="fa fa-pencil-square-o"></i>
-						<a class="plugin-edit" href="#" data-systemname="@item.SystemName">@T("Common.Edit")</a>
+					@if (item.Description.HasValue())
+					{
+						<div class="module-description">
+							@item.Description
+						</div>					
+					}
+					<div class="module-actions">
+						@if (item.IsEditable)
+						{
+							<a class="btn btn-link module-edit" href='@Url.Action("EditProviderPopup", "Plugin", new { systemName = item.SystemName, btnId = "btnRefresh" })'>
+								<i class="fa fa-pencil-square-o"></i>
+								@T("Admin.Common.Edit")
+							</a>
+						}
 						@if (item.IsConfigurable)
 						{
-							<i class="fa fa-cog"></i>
-							<a class="plugin-configure" href="@Url.Action("ConfigureProvider", "Plugin", new { systemName = item.SystemName })" data-systemname="@item.SystemName">@T("Admin.Common.Configure")</a>
+							<a class="btn btn-link module-configure" href="@Url.Action("ConfigureProvider", "Plugin", new { systemName = item.SystemName })">
+								<i class="fa fa-cog"></i>
+								@T("Admin.Common.Configure")
+							</a>
 						}
 					</div>
-				</td>
+				</div>
 				@foreach (var col in Model.ExtraColumns)
 				{
-					<td class="cell-install" style="width:initial">
+					<div class="module-col">
 						@RenderTemplate(col(item))
-					</td>
+					</div>
 				}
-			</tr>
-		}
-		<tr></tr>
-	</tbody>
-</table>
+			</div>
+		</div>
+	}
+</div>
+
+<button type="button" id="btnRefresh" class="hide"></button>
+
+<script>
+	$(function () {
+		$('.module-list').on('click', '.module-edit', function (e) {
+			e.preventDefault();
+			OpenWindow($(this).attr("href"), 800, 250, true);
+			return false;
+		});
+
+		$('#btnRefresh').on('click', function () {
+			// reload page
+			setLocation(location.href);
+			return false;
+		});
+		
+		$('.sortable-list').sortable({
+			items: '.module-item',
+			forcePlaceholderSize: true,
+			handle: '.sortable-grip'
+		}).on('sortupdate', function (e, ui) {
+			var items = $(this).closest('.sortable-list').find('.module-item');
+			var newOrder = [];
+			$.each(items, function (i, val) {
+				newOrder.push($(val).data('system-name'));
+			});
+			$.ajax({
+				async: false,
+				cache: false,
+				type: 'POST',
+				//dataType: 'json',
+				url: '@Url.Action("SortProviders", "Plugin")',
+				data: { providers: newOrder.join(",") }
+			});
+		});
+	});
+</script>
+
 
