New widget zone bottom from order totals in order details

--- a/src/Presentation/SmartStore.Web/Views/Order/Details.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Order/Details.Mobile.cshtml
@@ -477,6 +477,9 @@
                 </tbody>
             </table>
         </div>
+
+		@Html.Widget("mobile_orderdetails_page_aftertotal")
+
         @if (Model.Shipments.Count > 0)
         {
             <div class="section-title">
