Refactored widgets to be providers

--- a/src/Plugins/Widgets.TrustedShopsSeal/Views/TrustedShopsSeal/Configure.cshtml
+++ b/src/Plugins/Widgets.TrustedShopsSeal/Views/TrustedShopsSeal/Configure.cshtml
@@ -6,18 +6,18 @@
 @using SmartStore.Web.Framework;
 
 <div class="ts-info">
-    <img src="@Url.Content(@T("Plugins.Widgets.TrustedShopsCustomerReviews.Image.Logo"))" class="pull-right" />
+    <img src="@Url.Content(@T("Plugins.Widgets.TrustedShopsSeal.Image.Logo"))" class="pull-right" />
     <div class="intro">
-        @Html.Raw(T("Plugins.Widgets.TrustedShopsCustomerReviews.Introduction.Headline"))
+        @Html.Raw(T("Plugins.Widgets.TrustedShopsSeal.Introduction.Headline"))
     </div>
     <div class="clearfix">
         <div class="pull-left">
-            <img src="@Url.Content(T("Plugins.Widgets.TrustedShopsCustomerReviews.Image.Seal"))" />
+            <img src="@Url.Content(T("Plugins.Widgets.TrustedShopsSeal.Image.Seal"))" />
             <div class="prepared">
-                <span>@Html.Raw(T("Plugins.Widgets.TrustedShopsCustomerReviews.Prepared"))</span>
+                <span>@Html.Raw(T("Plugins.Widgets.TrustedShopsSeal.Prepared"))</span>
             </div>
         </div>
-        @Html.Raw(T("Plugins.Widgets.TrustedShopsCustomerReviews.Introduction.Body"))
+        @Html.Raw(T("Plugins.Widgets.TrustedShopsSeal.Introduction.Body"))
     </div>
 </div>
 
