--- a/src/Presentation/SmartStore.Web/Administration/Views/Plugin/ConfigureProvider.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Plugin/ConfigureProvider.cshtml
@@ -1,13 +1,25 @@
 ﻿@model ProviderModel
+
 @{    
     ViewBag.Title = T("Admin.Common.Configure").Text + " - " + Model.FriendlyName;
 }
+
 <div class="section-header">
     <div class="title">
 		<img src="@Url.Content(Model.IconUrl)" alt="@Model.FriendlyName" />
         @ViewBag.Title <a href="@ViewBag.ListUrl">(@T("Admin.Common.BackToList"))</a>
     </div>
+	@if (Model.PluginDescriptor != null)
+	{
+		<div class="options">
+			<a class="btn" href='@Url.Action("UpdateStringResources", "Plugin", new { systemName = Model.PluginDescriptor.SystemName, returnUrl = Request.RawUrl })'>
+				<i class="fa fa-refresh"></i>
+				@T("Admin.Configuration.Plugins.Resources.Update")
+			</a>
+		</div>		
+	}
 </div>
+
 @if (Model.ConfigurationRoute != null && Model.ConfigurationRoute.Action.HasValue())
 {
     @Html.Action(Model.ConfigurationRoute.Action, Model.ConfigurationRoute.Controller, Model.ConfigurationRoute.RouteValues);
