--- a/src/Presentation/SmartStore.Web/Views/Shared/NotFound.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/NotFound.cshtml
@@ -12,6 +12,6 @@
         <h1>@T("PageTitle.PageNotFound")</h1>
     </div>
     <div class="page-body">
-        @Html.Action("TopicBlock", "Topic", new { systemName = "PageNotFound" })
+        @Html.Action("TopicBlock", "Topic", new { systemName = "PageNotFound", area = "" })
     </div>
 </div>
